--- a/style.css
+++ b/style.css
@@ -3,3 +3,78 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #ff9a4e;
+  margin-bottom: 50px;
+}
+
+main {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.box-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 300px;
+  margin-right: 30px;
+  background-color: #eeeeee;
+  position: relative;
+}
+
+.box:last-child {
+  margin-right: 0;
+}
+
+.box-number {
+  width: 50px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #ff9a4b;
+  position: absolute;
+}
+
+.box-image1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-size: cover;
+  background-position: center bottom;
+  margin: 10px;
+}
+
+.box-image2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-size: cover;
+  background-position: center bottom;
+  margin: 10px;
+}
+
+.box-image3 {
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-size: cover;
+  background-position: center bottom;
+  margin: 10px;
+}
+
+.box-title {
+  margin: 5px 10px;
+}
+
+.box-text {
+  margin: 0 10px 10px 10px;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #aaaaaa;
+  margin-top: 50px;
+}
