--- a/style.css
+++ b/style.css
@@ -8,22 +8,18 @@ header {
   width: 100%;
   height: 50px;
   background-color: #ff9a4e;
-  margin-bottom: 50px;
 }
 
 main {
   width: 960px;
-  margin: 0 auto;
-}
-
-.box-list {
+  margin: 50px auto;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .box {
   width: 300px;
   margin-right: 30px;
+  padding: 10px;
   background-color: #eeeeee;
   position: relative;
 }
@@ -38,43 +34,37 @@ main {
   color: #ffffff;
   background-color: #ff9a4b;
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .box-image1 {
   height: 150px;
   background-image: url(img/flow01.png);
   background-size: cover;
-  background-position: center bottom;
-  margin: 10px;
+  background-position: bottom;
 }
 
 .box-image2 {
   height: 150px;
   background-image: url(img/flow02.png);
   background-size: cover;
-  background-position: center bottom;
-  margin: 10px;
+  background-position: bottom;
 }
 
 .box-image3 {
   height: 150px;
   background-image: url(img/flow03.png);
   background-size: cover;
-  background-position: center bottom;
-  margin: 10px;
+  background-position: bottom;
 }
 
 .box-title {
-  margin: 5px 10px;
-}
-
-.box-text {
-  margin: 0 10px 10px 10px;
+  margin: 15px 0 5px;
 }
 
 footer {
   width: 100%;
   height: 50px;
   background-color: #aaaaaa;
-  margin-top: 50px;
 }
